--- a/Pipfile
+++ b/Pipfile
@@ -20,6 +20,8 @@ bcrypt = "==4.3.0"
 python-multipart = "*"
 uvicorn = {extras = ["standard"], version = "*"}
 psycopg2-binary = "*"
+pandas = "*"
+openpyxl = "*"
 
 [dev-packages]
 
